@@ -207,6 +207,7 @@ docs@python.org), and we'll be glad to correct the problem.
    * Mats Wichmann
    * Gerry Wiener
    * Timothy Wild
+   * Paul Winkler
    * Collin Winter
    * Blake Winton
    * Dan Wolfe
