@@ -427,6 +427,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #1180: Added a new global option to ignore ~/.pydistutils.cfg in
+  Distutils.
+
 - Issue #7218: Fix test_site for win32, the directory comparison was done with
   an uppercase.
 
